Fullstack Codegen Round 1

--- a/backend/srv/compose.yaml
+++ b/backend/srv/compose.yaml
@@ -60,7 +60,7 @@ services:
     restart: unless-stopped
     environment:
       MARIADB_ROOT_PASSWORD: password
-      MARIADB_DATABASE: db
+      MARIADB_DATABASE: photonic-funnel-db
       MARIADB_USER: user
       MARIADB_PASSWORD: password
     volumes:
