--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,8 @@
-BACKEND_PORT="3005"
+BACKEND_PORT="3000"
 
-KEYCLOAK_URL="http://localhost:8080"
-KEYCLOAK_REALM=""
-KEYCLOAK_CLIENT_ID=""
+KEYCLOAK_URL="https://keycloak.testing.photonic-codes.cloud/auth"
+KEYCLOAK_REALM="photonic-funnel"
+KEYCLOAK_CLIENT_ID="local-photonic-funnel-backend-client"
 KEYCLOAK_CLIENT_SECRET=""
 
-DATABASE_NAME="db"
+DATABASE_NAME="photonic-funnel-db"
