Fullstack Codegen Round 2

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,8 @@
 {
-  "name": "frontend",
-  "version": "0.0.0",
+  "name": "photonic-funnel",
+  "version": "0.0.1",
+  "description": "The frontend for the photonic-funnel project",
+  "author": "Photonic Codes GmbH",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -10,33 +12,57 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.0.0",
-    "@angular/common": "^18.0.0",
-    "@angular/compiler": "^18.0.0",
-    "@angular/core": "^18.0.0",
-    "@angular/forms": "^18.0.0",
-    "@angular/platform-browser": "^18.0.0",
-    "@angular/platform-browser-dynamic": "^18.0.0",
-    "@angular/router": "^18.0.0",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
-    "keycloak-angular": "^16.1.0",
-    "keycloak-js": "^23.0.7",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.3"
+    "@angular/animations": "^19.0.5",
+    "@angular/common": "^19.0.5",
+    "@angular/compiler": "^19.0.5",
+    "@angular/core": "^19.0.5",
+    "@angular/forms": "^19.0.5",
+    "@angular/platform-browser": "^19.0.5",
+    "@angular/platform-browser-dynamic": "^19.0.5",
+    "@angular/router": "^19.0.5",
+    "@ngx-translate/core": "^16.0.4",
+    "@ngx-translate/http-loader": "^16.0.1",
+    "@syncfusion/ej2-angular-buttons": "^28.1.33",
+    "@syncfusion/ej2-angular-calendars": "^28.1.35",
+    "@syncfusion/ej2-angular-charts": "^28.1.35",
+    "@syncfusion/ej2-angular-circulargauge": "^28.1.33",
+    "@syncfusion/ej2-angular-documenteditor": "^28.1.35",
+    "@syncfusion/ej2-angular-dropdowns": "^28.1.35",
+    "@syncfusion/ej2-angular-filemanager": "^28.1.36",
+    "@syncfusion/ej2-angular-grids": "^28.1.35",
+    "@syncfusion/ej2-angular-inputs": "^28.1.33",
+    "@syncfusion/ej2-angular-kanban": "^28.1.33",
+    "@syncfusion/ej2-angular-lists": "^28.1.33",
+    "@syncfusion/ej2-angular-maps": "^28.1.33",
+    "@syncfusion/ej2-angular-navigations": "^28.1.35",
+    "@syncfusion/ej2-angular-notifications": "^28.1.33",
+    "@syncfusion/ej2-angular-popups": "^28.1.33",
+    "@syncfusion/ej2-angular-richtexteditor": "^28.1.35",
+    "@syncfusion/ej2-angular-schedule": "^28.1.35",
+    "@syncfusion/ej2-angular-splitbuttons": "^28.1.33",
+    "@syncfusion/ej2-compression": "^28.1.33",
+    "@syncfusion/ej2-data": "^28.1.33",
+    "@syncfusion/ej2-file-utils": "^28.1.33",
+    "keycloak-angular": "^19.0.2",
+    "keycloak-js": "^26.0.7",
+    "ngx-translate": "^0.0.1-security",
+    "rxjs": "~7.8.1",
+    "tslib": "^2.8.1",
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.0.7",
-    "@angular/cli": "^18.0.7",
-    "@angular/compiler-cli": "^18.0.0",
-    "@types/jasmine": "~5.1.0",
-    "jasmine-core": "~5.1.0",
-    "karma": "~6.4.0",
+    "@angular-devkit/build-angular": "^19.0.6",
+    "@angular/cli": "^19.0.6",
+    "@angular/compiler-cli": "^19.0.5",
+    "@faker-js/faker": "^9.3.0",
+    "@types/jasmine": "~5.1.5",
+    "@types/uuid": "^10.0.0",
+    "jasmine-core": "~5.5.0",
+    "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
+    "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.4.2"
+    "typescript": "5.6"
   }
 }
